Grace/tests/gibbs/errors/t265.grace
// ERROR = P1002
method empty
    false
